force-app/main/default/objects/Damage__c/fields/Damage_Type__c.field-meta.xml
<CustomField>
    <fullName>Damage_Type__c</fullName>
    <label>Damage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Bills — Past</fullName>
            </value>
            <value>
                <fullName>Medical Bills — Future</fullName>
            </value>
            <value>
                <fullName>Lost Wages — Past</fullName>
            </value>
            <value>
                <fullName>Lost Wages — Future</fullName>
            </value>
            <value>
                <fullName>Loss of Earning Capacity</fullName>
            </value>
            <value>
                <fullName>Pain &amp; Suffering</fullName>
            </value>
            <value>
                <fullName>Emotional Distress</fullName>
            </value>
            <value>
                <fullName>Loss of Consortium</fullName>
            </value>
            <value>
                <fullName>Property Damage — Vehicle</fullName>
            </value>
            <value>
                <fullName>Property Damage — Other</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Disfigurement</fullName>
            </value>
            <value>
                <fullName>Punitive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>