force-app/main/default/objects/Damage__c/fields/Documentation_Available__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation Available</label>
    <type>Checkbox</type>
</CustomField>