force-app/main/default/objects/Damage__c/fields/Is_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Is_Estimate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Estimate</label>
    <type>Checkbox</type>
</CustomField>