force-app/main/default/objects/Damage__c/fields/Is_Special_Damage__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Damage__c</fullName>
    <formula>OR(
    ISPICKVAL(Damage_Type__c, &quot;Medical Bills — Past&quot;),
    ISPICKVAL(Damage_Type__c, &quot;Medical Bills — Future&quot;),
    ISPICKVAL(Damage_Type__c, &quot;Lost Wages — Past&quot;),
    ISPICKVAL(Damage_Type__c, &quot;Lost Wages — Future&quot;),
    ISPICKVAL(Damage_Type__c, &quot;Loss of Earning Capacity&quot;),
    ISPICKVAL(Damage_Type__c, &quot;Property Damage — Vehicle&quot;),
    ISPICKVAL(Damage_Type__c, &quot;Property Damage — Other&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Special Damage</label>
    <type>Checkbox</type>
</CustomField>